--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #525151;
     color: white;
     padding: 1rem;
     text-align: center;
