--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,13 @@ body {
 
 header {
     background-color: #525151;
-    color: white;
+    color: rgb(255, 0, 0);
     padding: 1rem;
     text-align: center;
 }
 
 nav a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     margin: 0 1rem;
 }
