--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #525151;
+    background-color: #6a6a6a;
     color: rgb(255, 0, 0);
     padding: 1rem;
     text-align: center;
